Type:
Bug
Priority:
Major
Resolution:
Fixed
Affects Version/s:
N/A
CREATE TABLE t1 (i INT ) WITH SYSTEM VERSIONING;
INSERT INTO t1 VALUES (1),(2);
INSERT INTO t1 (sys_trx_end) SELECT sys_trx_start FROM t1;
bb-10.3-temporal 79dd77e6aebc861b
mysqld: /data/src/bb-10.3-temporal/sql/sql_select.cc:17624: TABLE* create_tmp_table(THD*, TMP_TABLE_PARAM*, List<Item>&, ORDER*, bool, bool, ulonglong, ha_rows, const char*, bool, bool): Assertion `!sys_trx_start && !sys_trx_end' failed.
171212 14:12:35 [ERROR] mysqld got signal 6 ;
#7 0x00007efc056c0ee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
#8 0x0000563bd76f83ca in create_tmp_table (thd=0x7efbe4000b00, param=0x7efbe4018800, fields=..., group=0x0, distinct=false, save_sum_fields=false, select_options=3490056960, rows_limit=18446744073709551615, table_alias=0x563bd821ab15 "", do_not_open=true, keep_row_order=false) at /data/src/bb-10.3-temporal/sql/sql_select.cc:17624
#9 0x0000563bd76d254b in JOIN::create_postjoin_aggr_table (this=0x7efbe4015dc0, tab=0x7efbe4017f18, table_fields=0x7efbe40160e0, table_group=0x0, save_sum_fields=false, distinct=false, keep_row_order=false) at /data/src/bb-10.3-temporal/sql/sql_select.cc:3317
#10 0x0000563bd76d0ca9 in JOIN::make_aggr_tables_info (this=0x7efbe4015dc0) at /data/src/bb-10.3-temporal/sql/sql_select.cc:2925
#11 0x0000563bd76cf833 in JOIN::optimize_stage2 (this=0x7efbe4015dc0) at /data/src/bb-10.3-temporal/sql/sql_select.cc:2603
#12 0x0000563bd76cd391 in JOIN::optimize_inner (this=0x7efbe4015dc0) at /data/src/bb-10.3-temporal/sql/sql_select.cc:1921
#13 0x0000563bd76cbb90 in JOIN::optimize (this=0x7efbe4015dc0) at /data/src/bb-10.3-temporal/sql/sql_select.cc:1493
#14 0x0000563bd76d52d0 in mysql_select (thd=0x7efbe4000b00, tables=0x7efbe4015640, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=3489925888, result=0x7efbe4015d18, unit=0x7efbe4004870, select_lex=0x7efbe4004fd0) at /data/src/bb-10.3-temporal/sql/sql_select.cc:4179
#15 0x0000563bd76c759e in handle_select (thd=0x7efbe4000b00, lex=0x7efbe40047a8, result=0x7efbe4015d18, setup_tables_done_option=1073741824) at /data/src/bb-10.3-temporal/sql/sql_select.cc:380
#16 0x0000563bd768c0fe in mysql_execute_command (thd=0x7efbe4000b00) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:4820
#17 0x0000563bd76960ec in mysql_parse (thd=0x7efbe4000b00, rawbuf=0x7efbe4014c58 "INSERT INTO t1 (sys_trx_end) SELECT sys_trx_start FROM t1", length=57, parser_state=0x7efc001305f0, is_com_multi=false, is_next_command=false) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:7985
#18 0x0000563bd768385a in dispatch_command (command=COM_QUERY, thd=0x7efbe4000b00, packet=0x7efbe411dbf1 "INSERT INTO t1 (sys_trx_end) SELECT sys_trx_start FROM t1", packet_length=57, is_com_multi=false, is_next_command=false) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:1829
#19 0x0000563bd768227b in do_command (thd=0x7efbe4000b00) at /data/src/bb-10.3-temporal/sql/sql_parse.cc:1371
#20 0x0000563bd77e896e in do_handle_one_connection (connect=0x563bda3da610) at /data/src/bb-10.3-temporal/sql/sql_connect.cc:1420
#21 0x0000563bd77e86fb in handle_one_connection (arg=0x563bda3da610) at /data/src/bb-10.3-temporal/sql/sql_connect.cc:1326
#22 0x0000563bd7c7e094 in pfs_spawn_thread (arg=0x563bda3e2580) at /data/src/bb-10.3-temporal/storage/perfschema/pfs.cc:1863
#23 0x00007efc07397494 in start_thread (arg=0x7efc00131700) at pthread_create.c:333
#24 0x00007efc0577d93f in clone () from /lib/x86_64-linux-gnu/libc.so.6
{"report":{"fcp":1255.7999997138977,"ttfb":285,"pageVisibility":"visible","entityId":64789,"key":"jira.project.issue.view-issue","isInitial":true,"threshold":1000,"elementTimings":{},"userDeviceMemory":8,"userDeviceProcessors":64,"apdex":0.5,"journeyId":"9dcd0e56-3d10-4c3d-8ddd-56bef6656c62","navigationType":0,"readyForUser":1358.5,"redirectCount":0,"resourceLoadedEnd":1198,"resourceLoadedStart":311.7999997138977,"resourceTiming":[{"duration":93.09999990463257,"initiatorType":"link","name":"https://jira.mariadb.org/s/2c21342762a6a02add1c328bed317ffd-CDN/lu2cib/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/css/_super/batch.css","startTime":311.7999997138977,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":311.7999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":404.8999996185303,"responseStart":0,"secureConnectionStart":0},{"duration":93.09999990463257,"initiatorType":"link","name":"https://jira.mariadb.org/s/7ebd35e77e471bc30ff0eba799ebc151-CDN/lu2cib/820016/12ta74/494e4c556ecbb29f90a3d3b4f09cb99c/_/download/contextbatch/css/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.css?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&slack-enabled=true&whisper-enabled=true","startTime":312.19999980926514,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":312.19999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":405.2999997138977,"responseStart":0,"secureConnectionStart":0},{"duration":150.40000009536743,"initiatorType":"script","name":"https://jira.mariadb.org/s/0917945aaa57108d00c5076fea35e069-CDN/lu2cib/820016/12ta74/0a8bac35585be7fc6c9cc5a0464cd4cf/_/download/contextbatch/js/_super/batch.js?locale=en","startTime":312.2999997138977,"connectEnd":312.2999997138977,"connectStart":312.2999997138977,"domainLookupEnd":312.2999997138977,"domainLookupStart":312.2999997138977,"fetchStart":312.2999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":312.2999997138977,"responseEnd":462.69999980926514,"responseStart":462.69999980926514,"secureConnectionStart":312.2999997138977},{"duration":261.7999997138977,"initiatorType":"script","name":"https://jira.mariadb.org/s/2d8175ec2fa4c816e8023260bd8c1786-CDN/lu2cib/820016/12ta74/494e4c556ecbb29f90a3d3b4f09cb99c/_/download/contextbatch/js/jira.browse.project,project.issue.navigator,jira.view.issue,jira.general,jira.global,atl.general,-_super/batch.js?agile_global_admin_condition=true&jag=true&jira.create.linked.issue=true&locale=en&slack-enabled=true&whisper-enabled=true","startTime":312.59999990463257,"connectEnd":312.59999990463257,"connectStart":312.59999990463257,"domainLookupEnd":312.59999990463257,"domainLookupStart":312.59999990463257,"fetchStart":312.59999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":312.59999990463257,"responseEnd":574.3999996185303,"responseStart":574.3999996185303,"secureConnectionStart":312.59999990463257},{"duration":291.7000002861023,"initiatorType":"script","name":"https://jira.mariadb.org/s/a9324d6758d385eb45c462685ad88f1d-CDN/lu2cib/820016/12ta74/c92c0caa9a024ae85b0ebdbed7fb4bd7/_/download/contextbatch/js/atl.global,-_super/batch.js?locale=en","startTime":312.7999997138977,"connectEnd":312.7999997138977,"connectStart":312.7999997138977,"domainLookupEnd":312.7999997138977,"domainLookupStart":312.7999997138977,"fetchStart":312.7999997138977,"redirectEnd":0,"redirectStart":0,"requestStart":312.7999997138977,"responseEnd":604.5,"responseStart":604.5,"secureConnectionStart":312.7999997138977},{"duration":302.1000003814697,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-en/jira.webresources:calendar-en.js","startTime":312.8999996185303,"connectEnd":312.8999996185303,"connectStart":312.8999996185303,"domainLookupEnd":312.8999996185303,"domainLookupStart":312.8999996185303,"fetchStart":312.8999996185303,"redirectEnd":0,"redirectStart":0,"requestStart":312.8999996185303,"responseEnd":615,"responseStart":615,"secureConnectionStart":312.8999996185303},{"duration":304.5,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:calendar-localisation-moment/jira.webresources:calendar-localisation-moment.js","startTime":313.09999990463257,"connectEnd":313.09999990463257,"connectStart":313.09999990463257,"domainLookupEnd":313.09999990463257,"domainLookupStart":313.09999990463257,"fetchStart":313.09999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":313.09999990463257,"responseEnd":617.5999999046326,"responseStart":617.5,"secureConnectionStart":313.09999990463257},{"duration":365.2000002861023,"initiatorType":"link","name":"https://jira.mariadb.org/s/b04b06a02d1959df322d9cded3aeecc1-CDN/lu2cib/820016/12ta74/a2ff6aa845ffc9a1d22fe23d9ee791fc/_/download/contextbatch/css/jira.global.look-and-feel,-_super/batch.css","startTime":313.3999996185303,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":313.3999996185303,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":678.5999999046326,"responseStart":0,"secureConnectionStart":0},{"duration":308.69999980926514,"initiatorType":"script","name":"https://jira.mariadb.org/rest/api/1.0/shortcuts/820016/47140b6e0a9bc2e4913da06536125810/shortcuts.js?context=issuenavigation&context=issueaction","startTime":313.59999990463257,"connectEnd":313.59999990463257,"connectStart":313.59999990463257,"domainLookupEnd":313.59999990463257,"domainLookupStart":313.59999990463257,"fetchStart":313.59999990463257,"redirectEnd":0,"redirectStart":0,"requestStart":313.59999990463257,"responseEnd":622.2999997138977,"responseStart":622.2999997138977,"secureConnectionStart":313.59999990463257},{"duration":365.19999980926514,"initiatorType":"link","name":"https://jira.mariadb.org/s/3ac36323ba5e4eb0af2aa7ac7211b4bb-CDN/lu2cib/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/css/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.css?jira.create.linked.issue=true","startTime":313.69999980926514,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":313.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":678.8999996185303,"responseStart":0,"secureConnectionStart":0},{"duration":314.7000002861023,"initiatorType":"script","name":"https://jira.mariadb.org/s/5d5e8fe91fbc506585e83ea3b62ccc4b-CDN/lu2cib/820016/12ta74/d176f0986478cc64f24226b3d20c140d/_/download/contextbatch/js/com.atlassian.jira.projects.sidebar.init,-_super,-project.issue.navigator,-jira.view.issue/batch.js?jira.create.linked.issue=true&locale=en","startTime":313.8999996185303,"connectEnd":313.8999996185303,"connectStart":313.8999996185303,"domainLookupEnd":313.8999996185303,"domainLookupStart":313.8999996185303,"fetchStart":313.8999996185303,"redirectEnd":0,"redirectStart":0,"requestStart":313.8999996185303,"responseEnd":628.5999999046326,"responseStart":628.5999999046326,"secureConnectionStart":313.8999996185303},{"duration":743.5999999046326,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-js/jira.webresources:bigpipe-js.js","startTime":314.69999980926514,"connectEnd":314.69999980926514,"connectStart":314.69999980926514,"domainLookupEnd":314.69999980926514,"domainLookupStart":314.69999980926514,"fetchStart":314.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":314.69999980926514,"responseEnd":1058.2999997138977,"responseStart":1058.2999997138977,"secureConnectionStart":314.69999980926514},{"duration":883.3000001907349,"initiatorType":"script","name":"https://jira.mariadb.org/s/d41d8cd98f00b204e9800998ecf8427e-CDN/lu2cib/820016/12ta74/1.0/_/download/batch/jira.webresources:bigpipe-init/jira.webresources:bigpipe-init.js","startTime":314.69999980926514,"connectEnd":314.69999980926514,"connectStart":314.69999980926514,"domainLookupEnd":314.69999980926514,"domainLookupStart":314.69999980926514,"fetchStart":314.69999980926514,"redirectEnd":0,"redirectStart":0,"requestStart":314.69999980926514,"responseEnd":1198,"responseStart":1198,"secureConnectionStart":314.69999980926514},{"duration":399.7000002861023,"initiatorType":"xmlhttprequest","name":"https://jira.mariadb.org/rest/webResources/1.0/resources","startTime":703.3999996185303,"connectEnd":703.3999996185303,"connectStart":703.3999996185303,"domainLookupEnd":703.3999996185303,"domainLookupStart":703.3999996185303,"fetchStart":703.3999996185303,"redirectEnd":0,"redirectStart":0,"requestStart":703.3999996185303,"responseEnd":1103.0999999046326,"responseStart":1103.0999999046326,"secureConnectionStart":703.3999996185303},{"duration":328,"initiatorType":"script","name":"https://www.google-analytics.com/analytics.js","startTime":1109.5999999046326,"connectEnd":0,"connectStart":0,"domainLookupEnd":0,"domainLookupStart":0,"fetchStart":1109.5999999046326,"redirectEnd":0,"redirectStart":0,"requestStart":0,"responseEnd":1437.5999999046326,"responseStart":0,"secureConnectionStart":0}],"fetchStart":0,"domainLookupStart":0,"domainLookupEnd":0,"connectStart":0,"connectEnd":0,"requestStart":136,"responseStart":285,"responseEnd":311,"domLoading":309,"domInteractive":1464,"domContentLoadedEventStart":1464,"domContentLoadedEventEnd":1517,"domComplete":2001,"loadEventStart":2001,"loadEventEnd":2002,"userAgent":"Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko; compatible; ClaudeBot/1.0; +claudebot@anthropic.com)","marks":[{"name":"bigPipe.sidebar-id.start","time":1442.7999997138977},{"name":"bigPipe.sidebar-id.end","time":1443.5},{"name":"bigPipe.activity-panel-pipe-id.start","time":1443.5999999046326},{"name":"bigPipe.activity-panel-pipe-id.end","time":1444.5},{"name":"activityTabFullyLoaded","time":1525.8999996185303}],"measures":[],"correlationId":"a54d139c832763","effectiveType":"4g","downlink":10,"rtt":0,"serverDuration":89,"dbReadsTimeInMs":9,"dbConnsTimeInMs":17,"applicationHash":"9d11dbea5f4be3d4cc21f03a88dd11d8c8687422","experiments":[]}}
https://github.com/MariaDB/server/commit/717f274b87121da49c3e9744aca1aae2ca938fc5