MDEV-14631 Assertion `!sys_trx_start && !sys_trx_end' failed in create_tmp_table

SQL: remove unneeded assertion
SQL: disallow set sys_trx fields in INSERT ... SELECT