sql/sql_select.cc
@@ -737,7 +737,26 @@ int SELECT_LEX::vers_setup_conds(THD *thd, TABLE_LIST *tables, COND **where_expr
     for (table= tables; table; table= table->next_local)
     {
       if (table->table && table->table->versioned())
+      {
         versioned_tables++;
+
+        if (thd->lex->sql_command == SQLCOM_INSERT_SELECT)
+        {
+          List_iterator_fast<Item> it(thd->lex->field_list);
+          while (Item *item= it++)
+          {
+            const LEX_CSTRING *name= &item->name;
+            if (!lex_string_cmp(system_charset_info, name,
+                                &table->table->vers_start_field()->field_name) ||
+                !lex_string_cmp(system_charset_info, name,
+                                &table->table->vers_end_field()->field_name))
+            {
+              my_error(ER_VERS_READONLY_FIELD, MYF(0), name->str);
+              DBUG_RETURN(-1);
+            }
+          }
+        }
+      }
       else if (table->vers_conditions)
       {
         my_error(ER_VERSIONING_REQUIRED, MYF(0), table->alias);
@@ -17631,10 +17650,6 @@ create_tmp_table(THD *thd, TMP_TABLE_PARAM *param, List<Item> &fields,
     share->field= table->field;
     share->row_start_field= sys_trx_start->field_index;
     share->row_end_field= sys_trx_end->field_index;
-  }
-  else
-  {
-    DBUG_ASSERT(!sys_trx_start && !sys_trx_end);
   }
 
   DBUG_ASSERT(fieldnr == (uint) (reg_field - table->field));
